@@ -1,61 +1,28 @@
 package co.rsk.federate.signing.hsm.client;
 
-import static co.rsk.federate.EventsTestUtils.createBatchPegoutCreatedLog;
-import static co.rsk.federate.EventsTestUtils.createPegoutTransactionCreatedLog;
-import static co.rsk.federate.EventsTestUtils.createReleaseRequestedLog;
-import static co.rsk.federate.EventsTestUtils.createUpdateCollectionsLog;
+import static co.rsk.federate.EventsTestUtils.*;
 import static co.rsk.federate.bitcoin.BitcoinTestUtils.coinListOf;
+import static co.rsk.federate.bitcoin.BitcoinTestUtils.createPegout;
 import static co.rsk.federate.signing.HSMCommand.GET_PUB_KEY;
 import static co.rsk.federate.signing.HSMCommand.SIGN;
-import static co.rsk.federate.signing.HSMField.AUTH;
-import static co.rsk.federate.signing.HSMField.COMMAND;
-import static co.rsk.federate.signing.HSMField.ERROR_CODE;
-import static co.rsk.federate.signing.HSMField.INPUT;
-import static co.rsk.federate.signing.HSMField.KEY_ID;
-import static co.rsk.federate.signing.HSMField.MESSAGE;
-import static co.rsk.federate.signing.HSMField.PUB_KEY;
-import static co.rsk.federate.signing.HSMField.R;
-import static co.rsk.federate.signing.HSMField.RECEIPT;
-import static co.rsk.federate.signing.HSMField.RECEIPT_MERKLE_PROOF;
-import static co.rsk.federate.signing.HSMField.S;
-import static co.rsk.federate.signing.HSMField.SIGNATURE;
-import static co.rsk.federate.signing.HSMField.TX;
-import static co.rsk.federate.signing.HSMField.VERSION;
-import static co.rsk.federate.signing.utils.TestUtils.createBaseInputScriptThatSpendsFromTheFederation;
-import static co.rsk.federate.signing.utils.TestUtils.createBlock;
-import static co.rsk.federate.signing.hsm.config.PowHSMConfigParameter.MAX_ATTEMPTS;
+import static co.rsk.federate.signing.HSMField.*;
 import static co.rsk.federate.signing.hsm.config.PowHSMConfigParameter.INTERVAL_BETWEEN_ATTEMPTS;
-import static org.junit.jupiter.api.Assertions.assertArrayEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.junit.jupiter.api.Assertions.fail;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static co.rsk.federate.signing.hsm.config.PowHSMConfigParameter.MAX_ATTEMPTS;
+import static co.rsk.federate.signing.utils.TestUtils.createBlock;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
-import co.rsk.bitcoinj.core.Address;
-import co.rsk.bitcoinj.core.BtcTransaction;
-import co.rsk.bitcoinj.core.Coin;
-import co.rsk.bitcoinj.core.NetworkParameters;
-import co.rsk.bitcoinj.core.Sha256Hash;
-import co.rsk.bitcoinj.core.TransactionInput;
-import co.rsk.bitcoinj.core.TransactionWitness;
-import co.rsk.bitcoinj.script.Script;
+import co.rsk.bitcoinj.core.*;
 import co.rsk.core.RskAddress;
 import co.rsk.crypto.Keccak256;
 import co.rsk.federate.bitcoin.BitcoinTestUtils;
-import co.rsk.federate.bitcoin.BtcTransactionBuilder;
-import co.rsk.federate.rpc.JsonRpcClient;
-import co.rsk.federate.rpc.JsonRpcClientProvider;
-import co.rsk.federate.rpc.JsonRpcException;
+import co.rsk.federate.rpc.*;
 import co.rsk.federate.signing.KeyId;
+import co.rsk.federate.signing.LegacySigHashCalculatorImpl;
+import co.rsk.federate.signing.SigHashCalculator;
 import co.rsk.federate.signing.hsm.HSMClientException;
 import co.rsk.federate.signing.hsm.HSMVersion;
-import co.rsk.federate.signing.hsm.message.PowHSMSignerMessage;
-import co.rsk.federate.signing.hsm.message.PowHSMSignerMessageBuilder;
-import co.rsk.federate.signing.hsm.message.ReleaseCreationInformation;
-import co.rsk.federate.signing.hsm.message.SignerMessageBuilderException;
+import co.rsk.federate.signing.hsm.message.*;
 import co.rsk.federate.signing.utils.TestUtils;
 import co.rsk.peg.constants.BridgeConstants;
 import co.rsk.peg.constants.BridgeMainNetConstants;
@@ -64,16 +31,10 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.*;
 import java.util.stream.IntStream;
 import org.bouncycastle.util.encoders.Hex;
-import org.ethereum.core.Block;
-import org.ethereum.core.Transaction;
-import org.ethereum.core.TransactionReceipt;
+import org.ethereum.core.*;
 import org.ethereum.crypto.ECKey;
 import org.ethereum.db.ReceiptStore;
 import org.ethereum.db.TransactionInfo;
@@ -89,10 +50,18 @@ class PowHSMSigningClientBtcTest {
     private static final BridgeConstants bridgeMainnetConstants = BridgeMainNetConstants.getInstance();
     private static final NetworkParameters btcMainnetParams = bridgeMainnetConstants.getBtcParams();
 
-    private static final Federation newFederation = TestUtils.createFederation(
-        bridgeMainnetConstants.getBtcParams(), 9);
-    private static final Federation oldFederation = TestUtils.createFederation(
-        bridgeMainnetConstants.getBtcParams(), 5);
+    private static final Federation newFederation = TestUtils.createStandardMultisigFederation(
+        bridgeMainnetConstants.getBtcParams(),
+        9
+    );
+    private static final Federation oldFederation = TestUtils.createStandardMultisigFederation(
+        bridgeMainnetConstants.getBtcParams(),
+        5
+    );
+    private static final Federation oldSegwitFederation = TestUtils.createP2shP2wshErpFederation(
+        bridgeMainnetConstants.getBtcParams(),
+        5
+    );
 
     private static final HSMSignature expectedSignature = createMockSignature();
     private final ECKey signerPk = ECKey.fromPrivate(Hex.decode("fa01"));
@@ -272,10 +241,14 @@ class PowHSMSigningClientBtcTest {
         List<Coin> expectedOutpointValues)
         throws JsonRpcException, SignerMessageBuilderException, HSMClientException {
         // arrange
-        BtcTransaction pegoutBtcTx = createPegout(expectedOutpointValues,
-            createDestinationAddresses(expectedOutpointValues.size()), false);
-        List<LogInfo> logs = new ArrayList<>();
+        BtcTransaction pegoutBtcTx = createPegout(
+            btcMainnetParams,
+            oldFederation,
+            expectedOutpointValues,
+            createDestinationAddresses(expectedOutpointValues.size())
+        );
 
+        List<LogInfo> logs = new ArrayList<>();
         addCommonPegoutLogs(logs, pegoutBtcTx);
 
         List<Keccak256> pegoutRequestRskTxHashes = Collections.singletonList(
@@ -293,22 +266,29 @@ class PowHSMSigningClientBtcTest {
 
         client = new PowHSMSigningClientBtc(hsmClientProtocol, hsmVersion.getNumber());
 
+        SigHashCalculator sigHashCalculator = new LegacySigHashCalculatorImpl();
         PowHSMSignerMessageBuilder powHSMSignerMessageBuilder = new PowHSMSignerMessageBuilder(
-            receiptStore, releaseCreationInformation);
+            receiptStore, releaseCreationInformation, sigHashCalculator);
 
         signAndExecuteAssertions(hsmVersion, expectedOutpointValues, powHSMSignerMessageBuilder);
     }
 
     @ParameterizedTest
     @MethodSource("signArgProvider")
-    void sign_whenSegwitBatchPegoutHasPegoutTransactionCreatedEvent_returnsOk(HSMVersion hsmVersion,
-        byte[] serializedOutpointValues, List<Coin> expectedOutpointValues)
-        throws JsonRpcException, SignerMessageBuilderException, HSMClientException {
+    void sign_whenSegwitBatchPegoutHasPegoutTransactionCreatedEvent_returnsOk(
+        HSMVersion hsmVersion,
+        byte[] serializedOutpointValues,
+        List<Coin> expectedOutpointValues
+    ) throws JsonRpcException, SignerMessageBuilderException, HSMClientException {
         // arrange
-        BtcTransaction pegoutBtcTx = createPegout(expectedOutpointValues,
-            createDestinationAddresses(expectedOutpointValues.size()), true);
-        List<LogInfo> logs = new ArrayList<>();
+        BtcTransaction pegoutBtcTx = createPegout(
+            btcMainnetParams,
+            oldSegwitFederation,
+            expectedOutpointValues,
+            createDestinationAddresses(expectedOutpointValues.size())
+        );
 
+        List<LogInfo> logs = new ArrayList<>();
         addCommonPegoutLogs(logs, pegoutBtcTx);
 
         List<Keccak256> pegoutRequestRskTxHashes = Collections.singletonList(
@@ -330,8 +310,9 @@ class PowHSMSigningClientBtcTest {
 
         client = new PowHSMSigningClientBtc(hsmClientProtocol, hsmVersion.getNumber());
 
+        SigHashCalculator sigHashCalculator = new LegacySigHashCalculatorImpl();
         PowHSMSignerMessageBuilder powHSMSignerMessageBuilder = new PowHSMSignerMessageBuilder(
-            receiptStore, releaseCreationInformation);
+            receiptStore, releaseCreationInformation, sigHashCalculator);
 
         signAndExecuteAssertions(hsmVersion, expectedOutpointValues, powHSMSignerMessageBuilder);
     }
@@ -342,8 +323,12 @@ class PowHSMSigningClientBtcTest {
         byte[] serializedOutpointValues, List<Coin> expectedOutpointValues)
         throws JsonRpcException, SignerMessageBuilderException, HSMClientException {
         // arrange
-        BtcTransaction pegoutBtcTx = createPegout(expectedOutpointValues,
-            Collections.singletonList(newFederation.getAddress()), true);
+        BtcTransaction pegoutBtcTx = createPegout(
+            btcMainnetParams,
+            oldSegwitFederation,
+            expectedOutpointValues,
+            Collections.singletonList(newFederation.getAddress())
+        );
 
         List<LogInfo> logs = new ArrayList<>();
 
@@ -362,8 +347,9 @@ class PowHSMSigningClientBtcTest {
 
         client = new PowHSMSigningClientBtc(hsmClientProtocol, hsmVersion.getNumber());
 
+        SigHashCalculator sigHashCalculator = new LegacySigHashCalculatorImpl();
         PowHSMSignerMessageBuilder powHSMSignerMessageBuilder = new PowHSMSignerMessageBuilder(
-            receiptStore, releaseCreationInformation);
+            receiptStore, releaseCreationInformation, sigHashCalculator);
 
         signAndExecuteAssertions(hsmVersion, expectedOutpointValues, powHSMSignerMessageBuilder);
     }
@@ -423,53 +409,10 @@ class PowHSMSigningClientBtcTest {
         logs.add(releaseRequestedLog);
     }
 
-    private BtcTransaction createPegout(List<Coin> outpointValues,
-        List<Address> destinationAddresses, boolean segwit) {
-
-        BtcTransactionBuilder btcTransactionBuilder = new BtcTransactionBuilder();
-
-        // TODO: improve this method to create a more realistic btc segwit transaction
-        //  once {@link SignerMessageBuilder#getSigHashByInputIndex(int)} is refactored to support segwit
-        Script inputScriptThatSpendsFromTheFederation = createBaseInputScriptThatSpendsFromTheFederation(
-            oldFederation);
-
-        Coin fee = Coin.MILLICOIN;
-        for (int inputIndex = 0; inputIndex < outpointValues.size(); inputIndex++) {
-            Coin outpointValue = outpointValues.get(inputIndex);
-            Coin amountToSend = outpointValue.minus(fee);
-            // Iterate over the addresses using inputIndex % addresses.size() to have outputs to different addresses
-            Address destinationAddress = destinationAddresses.get(
-                inputIndex % destinationAddresses.size());
-
-            TransactionInput txInput = btcTransactionBuilder.createInputBuilder()
-                .withAmount(outpointValue).withOutpointIndex(inputIndex)
-                .withScriptSig(inputScriptThatSpendsFromTheFederation)
-                .build();
-
-            btcTransactionBuilder
-                .withInput(
-                    txInput
-                )
-                .withOutput(amountToSend, destinationAddress);
-
-            // TODO: change this dummy witness for a real witness once segwit is fully implemented in bitcoinj-thin
-            // make it a segwit tx by adding a single witness
-            if (segwit) {
-                TransactionWitness witness = new TransactionWitness(1);
-                witness.setPush(0, new byte[]{1});
-
-                btcTransactionBuilder.withWitness(inputIndex, witness);
-            }
-        }
-
-        return btcTransactionBuilder.build();
-    }
-
     private List<Address> createDestinationAddresses(int numberOfAddresses) {
         return IntStream.range(0, numberOfAddresses)
-            .mapToObj(index -> BitcoinTestUtils.createP2PKHAddress(btcMainnetParams,
-                "userAddress" + index))
-            .collect(Collectors.toList());
+            .mapToObj(index -> BitcoinTestUtils.createP2PKHAddress(btcMainnetParams, "userAddress" + index))
+            .toList();
     }
 
     private void signAndExecuteAssertions(HSMVersion hsmVersion, List<Coin> expectedOutpointValues,
@@ -488,8 +431,10 @@ class PowHSMSigningClientBtcTest {
             PowHSMSignerMessage powHSMSignerMessage = (PowHSMSignerMessage) powHSMSignerMessageBuilder.buildMessageForIndex(
                 inputIndex);
 
-            ObjectNode expectedSignCommand = buildSignCommand(hsmVersion.getNumber(),
-                powHSMSignerMessage);
+            ObjectNode expectedSignCommand = buildSignCommand(
+                hsmVersion.getNumber(),
+                powHSMSignerMessage
+            );
             when(jsonRpcClientMock.send(expectedSignCommand)).thenReturn(response);
 
             HSMSignature signature = client.sign(signerBtcKeyId.getId(), powHSMSignerMessage);
@@ -553,14 +498,13 @@ class PowHSMSigningClientBtcTest {
     private PowHSMSignerMessage buildMessageForIndexTesting() {
         PowHSMSignerMessage messageForSignature = mock(PowHSMSignerMessage.class);
         when(messageForSignature.getInputIndex()).thenReturn(0);
-        when(messageForSignature.getBtcTransactionSerialized()).thenReturn("aaaa");
         when(messageForSignature.getTransactionReceipt()).thenReturn("cccc");
         when(messageForSignature.getReceiptMerkleProof()).thenReturn(new String[]{"cccc"});
         Sha256Hash sigHash = Sha256Hash.of(Hex.decode("bbccddee"));
         when(messageForSignature.getSigHash()).thenReturn(sigHash);
 
         ObjectNode message = objectMapper.createObjectNode();
-        message.put(TX.getFieldName(), messageForSignature.getBtcTransactionSerialized());
+        message.put(TX.getFieldName(), "aaaa");
         message.put(INPUT.getFieldName(), messageForSignature.getInputIndex());
         when(messageForSignature.getMessageToSign(HSMVersion.V2.getNumber())).thenReturn(message);
         return messageForSignature;
